--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ core-foundation = "0.10"
 # Home directory detection
 dirs = "5.0"
 
+# Configuration
+toml = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+
 # Logging
 log = "0.4"
 env_logger = "0.11"
